--- a/src/package.json
+++ b/src/package.json
@@ -17,7 +17,8 @@
     "expo-status-bar": "~1.4.0",
     "firebase": "^9.13.0",
     "formik": "^2.2.9",
-    "react": "18.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-native": "0.69.6",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
