--- a/src/package.json
+++ b/src/package.json
@@ -14,15 +14,16 @@
     "expo": "^47.0.0",
     "expo-constants": "~14.0.2",
     "expo-status-bar": "~1.4.2",
+    "expo-updates": "~0.15.4",
     "firebase": "^9.13.0",
     "formik": "^2.2.9",
+    "prop-types": "^15.8.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "styled-components": "^5.3.6",
-    "expo-updates": "~0.15.4"
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3"
